Fixed assets url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,5 +13,6 @@
     <main>
       {{ content }}
     </main>
+    <script src="{{'/assets/js/features.js' | relative_url}}"></script>
   </body>
 </html>
