--- a/_includes/display/picture.html
+++ b/_includes/display/picture.html
@@ -1,4 +1,4 @@
-{% if include.src %}
+{%- if include.src %}
 {% capture picture_src%}/assets/images/{{include.src}}{% endcapture %}
-<img src="{{picture_src | relative_url}}" alt=""/>
-{% endif %}
+<picture class="exercise-image-container"><img src="{{picture_src | relative_url}}" alt=""></picture>
+{%- endif %}
